--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,16 @@ dependencies {
     compile group: 'org.aspectj', name: 'aspectjrt', version:'1.7.4'
     compile group: 'org.springframework', name: 'spring-webmvc', version:'4.0.2.RELEASE'
     compile group: 'javax.servlet', name: 'jstl', version:'1.2'
+    compile group: 'com.google.guava', name: 'guava', version: '23.0'
+    provided group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
     compile group: 'org.apache.shiro', name: 'shiro-spring', version:'1.2.2'
     compile group: 'org.apache.shiro', name: 'shiro-ehcache', version:'1.2.2'
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.0.3.Final'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.3.1'
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version:'2.3.1'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.8.9'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.31'
+    compile group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
     compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.6'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.1.1'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.6'
