--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
     mavenCentral()
 }
 dependencies {
+    // https://mvnrepository.com/artifact/com.rabbitmq/amqp-client
+    compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.0'
     // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
     compile group: 'org.springside', name: 'springside-core', version:'4.2.2.GA'
